@@ -4,6 +4,7 @@ Roundcube Webmail SieveRules
 2012 04 14
 ==========
  * Update for Roundcube framework
+ * Add advanced options for editheader extension to UI
 
 2012 04 13
 ==========
